--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <table id="data-table">
+    <table id="data-table" border="3" align="center">
       <thead>
         <tr>
           <th>Username</th>
@@ -22,21 +22,21 @@
           <td>example@email.com</td>
           <td>Demoland 123</td>
           <td>X</td>
-          <td><img src="" alt="" heigh=64 width=64></img></td>
+          <td><img src="" alt="" style="width:64px ; height:64px"></img></td>
         </tr>
         <tr>
           <td>User123</td>
           <td>example@email.com</td>
           <td>Userplace 321</td>
           <td>-</td>
-          <td><img src="" alt="" heigh=64 width=64></img></td>
+          <td><img src="" alt="" style="width:64px ; height:64px"></img></td>
         </tr>
         <tr>
           <td>AnotherUser222</td>
           <td>example@email.com</td>
           <td>AnotherPlace 21</td>
           <td>-</td>
-          <td><img src="" alt="" heigh=64 width=64></img></td>
+          <td><img src="" alt="" style="width:64px ; height:64px"></img></td>
         </tr>
       </tbody>
     </table>
