--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         accept="image/"
       />
     </form>
-    <img id="output" src=""/>
+    <img id="output" src="" style="width:64px ; height:64px"/>
     <br>
     <button id="submit-data"">
         Submit
